# modelops

./: .gitignore  CLAUDE.md  Makefile  README.md  TODO.md  implementation-plan.md  install.sh  modelops-images.yaml  modelops_azure_mvp_plan.md  pyproject.toml  sim-executor-architecture-v3.1.md
.github/workflows/: docker-build.yml  tests.yml
docker/: Dockerfile.runner  Dockerfile.scheduler  Dockerfile.smoketest  Dockerfile.worker  README.md
docs/: abm-replicates-strategy.md  index.md  mops-init-consolidation-proposal.md  mops_init_consolidation_proposal.md  provenance-store-design.md  python-3.13-json-unboundlocalerror.md  python_version_compatibility.md  telemetry-design.md  troubleshooting-image-deployment.md  warm-process-pool-design.md
docs/architecture/: dask-configuration.md  execution_environments_overview.md  job_submission_architecture.md  provenance-store.md  provenance_attribution_problem.md  provenance_design_overview.md  registry_staleness_design.md  result_indexing_design_problem.md  simulation-execution-architecture.md  target_losses_collection_proposal.md  warm-process-pool-design.md  warm_process_pool_design.md  workspace_config_design_issue.md
docs/archive/: artifact_completion_implementation_plan.md  artifact_validation_user_guide.md  auth_refactor_plan.md  auth_setup.md  azure_job_observability_mvp.md  bundle_workflow_state_flow.md  credential_flow_findings.md  image_pipeline_setup.md  implementation_plan.md  infra_robustness_plan.md  job_observability_implementation_summary.md  job_observability_plan.md  modelops_bundle_repository_plan.md  multiple_workspace_plan.md  oci_bundle_integration_plan.md  progress_report_2025_01_03.md  readme.md  refactor_plan.md  sim_executor_architecture_v3_1.md  simbatch_removal_refactor.md  simulation_execution_flow.md  test_audit_for_refactor.md  troubleshooting_bundle_registry.md
docs/design/: job-submission-architecture.md
docs/dev/: README.md  calibration_multi_target_updates.md  python_version_check.md
docs/diagrams/: Makefile  aggregation-patterns.d2  overview.d2  provenance-scheme.d2  pulumi-stacks.d2  simulation-execution.d2  warm-process-pool.d2
docs/incidents/: cold_executor_deployment_bug.md  cold_executor_deployment_guide.md  cold_executor_fix_applied.md  cold_executor_implementation_plan.md  cpp_state_leakage_fix.md  deadlock_analysis_for_colleague.md  disable_threading_and_warm_processes.md  missing_dependency_error_masking.md  modelops_bundle_issue_plan.md  oom_scaling_issue_breakdown.md  readme.md
docs/notes/: acr_workload_identity_migration_plan.md  current_issues_report.md  readme.md
docs/process/: claude_guidance.md  commit_messages.md  repository_guidelines.md
docs/proposals/: snakemake-integration.md
docs/reference/: cli.md
docs/setup/: quick-start.md
examples/: README-COLD-EXECUTOR.md  aggregation_functions.py  demo_cache_replication.py  dev_wire.py  optuna-infra.yaml  run_dask_simulation.py  simulations.py  start_local_dask.py  storage.yaml  test_cache_replication.py  test_dask_aggregation.py  test_dask_service_replicates.py  test_dask_simple.py  test_job_views_local.py  test_replicate_aggregation_e2e.py  test_simple_aggregation.py  test_simulation_e2e.py  test_warm_pool_caching.py  unified-infra.yaml  workspace-cold.yaml  workspace-medmem.yaml  workspace-simple.yaml  workspace.yaml
examples/hung_bundle/: pyproject.toml
examples/hung_bundle/.modelops/: manifest.json
examples/hung_bundle/hung_bundle/: __init__.py  wire.py
examples/providers/: azure.yaml
examples/simulation-workflow/: Makefile  README.md  generate_observed_data.py
examples/simulation-workflow/models/: seir.py
examples/simulation-workflow/targets/: __init__.py  prevalence.py
examples/starsim-sir/: .gitignore  Makefile  README.md  generate_observed_data.py  preflight_check.py  pyproject.toml  study.json  test_pairplot.py
examples/starsim-sir/models/: sir.py
examples/starsim-sir/targets/: __init__.py  incidence.py
examples/test_bundle/: Makefile  README.md  aggregation_functions.py  pyproject.toml  targets.py
examples/test_bundle/.modelops/: manifest.json
examples/test_bundle/test_bundle/: __init__.py  models.py  wire.py
scripts/: check_azure_resources.sh  validate-no-hardcoded-images.sh
src/modelops/: __init__.py  _version.py  errors.py  images.py  modelops-images.yaml  versions.py
src/modelops/cli/: __init__.py  adaptive.py  bundle.py  cleanup.py  cluster.py  common_options.py  config.py  dev.py  display.py  formatting.py  infra.py  init.py  jobs.py  k8s_client.py  main.py  registry.py  results.py  status.py  storage.py  templates.py  utils.py  validators.py  workspace.py  workspace_overrides.py
src/modelops/client/: __init__.py  base.py  cluster_service.py  infra_service.py  job_submission.py  registry_service.py  resource_group_service.py  storage_service.py  utils.py  workspace_service.py
src/modelops/components/: __init__.py  config_base.py  specs.py
src/modelops/core/: __init__.py  automation.py  config.py  env.py  env_config.py  env_reconcile.py  executor.py  k8s.py  (+5 more)
tests/: README.md  conftest.py  test_arrow_transport.py  test_blob_integration.py  test_component_dependencies.py  test_configs.py  test_contracts.py  test_dask_serialization.py  test_images.py  test_infra_utils.py  test_integration.py  test_ipc.py  test_job_registry.py  test_job_registry_integration.py  test_jsonrpc.py  test_naming.py  test_output_validation_simple.py  test_process_manager_race.py  test_provenance_schema.py  test_provenance_store.py  test_pulumi_passphrase.py  test_result_indexer.py  test_runners.py  test_runtime_environment.py  test_services.py  test_simple_race.py  test_simulation_service.py  test_state.py  test_subprocess_aggregate.py  test_subprocess_runner.py  test_versioned_store.py  test_warm_timeout.py  test_worker_plugin.py  test_workspace.py
tests/integration/: __init__.py  conftest.py  test_critical_regressions.py  test_dask_aggregation.py  test_oci_bundle_integration.py  test_simulation_e2e.py
tests/telemetry/: test_collector.py  test_storage.py
tools/: test_ultra_cold.sh
(+98 files in other folders)
