[project]
name = "modelops"
version = "0.1.0"
description = "Infrastructure orchestration for ML experimentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "modelops-contracts",
    "rich>=14.1.0",
    "typer>=0.16.1",
    "pyyaml>=6.0",
    "polars>=0.20.0",
    "pyarrow>=14.0.0",
    "dask[distributed]==2024.8.0",
    "pulumi>=3.100.0",
    "pulumi-kubernetes>=4.5.0",
    "kubernetes>=28.0.0",
]

[project.optional-dependencies]
azure = [
    "pulumi-azure-native>=2.20.0",
]

[project.scripts]
mops = "modelops.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
modelops-contracts = { path = "../modelops-contracts" }
