[project]
name = "modelops"
version = "0.1.0"
description = "Infrastructure orchestration for ML experimentation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "modelops-contracts",
    "rich>=14.1.0",
    "typer>=0.16.1",
    "pyyaml>=6.0",
    "polars>=0.20.0",
    "pyarrow>=14.0.0",
    "dask[distributed]==2024.8.0",
    "pulumi>=3.100.0",
    "pulumi-kubernetes>=4.5.0",
    "kubernetes>=28.0.0",
    "pulumi-azure-native>=3.7.1",
    "numpy>=2.3.2",
    "pulumi-tls>=5.2.2",
    "pulumi-random>=4.18.3",
    "pandas>=2.3.2",
    "azure-storage-blob[azure]>=12.26.0",
]

[project.optional-dependencies]
# Azure dependencies are in main for MVP
# Future: aws = ["pulumi-aws>=..."]
# Future: gcp = ["pulumi-gcp>=..."]

[project.scripts]
mops = "modelops.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
modelops-bundle = { path = "../modelops-bundle" }
modelops-contracts = { path = "../modelops-contracts", editable = true }

[dependency-groups]
azure = [
    "azure-storage-blob>=12.26.0",
]
bundle = [
    "modelops-bundle",
]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-timeout>=2.4.0",
]

[tool.hatch.build]
packages = ["src/modelops", "examples"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: Integration tests that require Dask cluster",
    "slow: Tests that take a long time to run",
]
# Run unit tests by default, integration tests with: pytest -m integration
addopts = "-m 'not integration'"
